--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="Car Leasing, SD Loans & Leasing, Vehicle Finance, Auto Leasing, Affordable Car Lease">
     <title>Car Leasing Solutions - SD Loans & Leasing</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://micolionheart.github.io/sd-loan-and-leasing16/">
+    <meta name="google-site-verification" content="KlL2gyJN5mAKYcYM6R7sgz-2SVxvl3d0-GEf2olO_aw" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WBM2FG34M7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WBM2FG34M7');
+</script>
 </head>
 <body>
     <header>
